# mandelbrot

./: Main.hs  Mandelbrot.hs  flake.nix  mandelbrot.cabal
