cabal-version:       >=1.10
name:                mandelbrot
version:             0.1.0.0
author:              flothepo
maintainer:          f.guthmann@mailbox.org
build-type:          Simple

library
  hs-source-dirs:
    .
  default-language: Haskell2010
  ghc-options:         -Wall -O2
  exposed-modules:
    Mandelbrot
  build-depends:       base >= 4.7 && < 5,
                       sdl2

executable mandelbrot
  main-is:             Main.hs
  other-modules: Mandelbrot
  -- other-extensions:
  ghc-options:         -O2
                       -threaded
  build-depends:       base >=4.7 && < 5,
                       sdl2
  default-language:    Haskell2010


